refactor(daemon): Refactor URL to URI because it becomes potential bug